2003-01-12  Mo DeJong  <mdejong@users.sourceforge.net>

	* win/Makefile.in: Add TCL_DEFS to AC_FLAGS
	so that compiler flags defined by Tcl get
	passed to the compiler. Add empty rule
	for cat.c so that Tk compiles under msys.
	* win/configure: Regen.
	* win/tcl.m4: Update from Tcl, this pulls
	in a subst of TCL_DEFS, it also defines
	USE_THREAD_ALLOC when threads are used
	and it updates the SC_ENABLE_SYMBOLS
	and SC_PROG_TCLSH macros to match the
	ones used in Tcl.

2003-01-10  Joe English  <jenglish@users.sourceforge.net>

	* unix/tkUnixEvent.c (OpenIM): Remove unused variable
	(Fixes: #664780 "SGI warning: OpenIM")

2003-01-08  D. Richard Hipp <drh@hwaci.com>

	* generic/tkCanvLine.c:
	* generic/tkCanvas.h:
	* generic/tkCanvUtil.c: Clip long lines so that they will display
	properly even on windowing systems where coordinates are expressed
	as 16-bit numbers.  [But #663981]

2003-01-03  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tkFrame.c (CreateFrame): throw a Tcl error instead of a
	panic when we cannot get a main window and appname is NULL.  This
	can indicate that a user tried to create a frame/toplevel while Tk
	was dying. [Bug #661792]

2002-12-27  David Gravereaux <davygrvy@pobox.com>

	* generic/tkText.h: ANSI unfriendly typedef for TkTextBTree
	repaired for C++ compilers.

2002-12-27  Joe English  <jenglish@users.sourceforge.net>

	* unix/tkUnixWm.c (WaitForEvent): process Map and Unmap events
	as well as Configure events during WaitFor{Configure|Map}Notify.
	Fixes [Bug 578569] (WaitForMapNotify could process Map and Unmap
	events out of order, making Tk think a window was unmapped when
	it really wasn't).

2002-12-18  Todd M. Helfter  <tmh@purdue.edu>

	* doc/label.n: Fixed documentation of the -compound option to
	the label widget.  The option was simply missing from the
	man page [Bug 577540]

2002-12-17  Donal K. Fellows  <fellowsd@cs.man.ac.uk>

	* doc/photo.n: Fixed documentation of the put subcommand to no